plugins {
    id 'java'
    id 'application'
}

version = '0.1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

application {
    mainClass = 'jtlsdoctor.Main'
}

jar {
    manifest {
        attributes 'Main-Class': 'jtlsdoctor.Main'
    }
}
